[package]
name = "LuaEngineUtilities"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
# panic = "abort"

[dependencies]
mhw_toolkit = { path = "../mhw-toolkit", features = ["logger", "hooks"]}
windows = { version = "0.58", features = ["Win32_System_SystemServices"] }
log = "0.4"
once_cell = "1.19"
mlua = { version = "0.9", features = ["lua54", "vendored", "send", "serialize"] }
rand = "0.8"
anyhow = "1.0"

[build-dependencies]
winres = "0.1"
